# my-planner

./: 01 dietary_preference_report.md  02 weekly_menu_plan.md  03 shopping_list.md  README.md  pyproject.toml
RESULTS/crewai deployment results/: output 1.md  output 2.md  output 3.md
RESULTS/df add loc/: 00 terminal output.md  01 dietary_preference_report.md  02 weekly_menu_plan.md  03 shopping_list.md
RESULTS/df add loc cuisine/: 00 terminal output.md  01 dietary_preference_report.md  02 weekly_menu_plan.md  03 shopping_list.md
RESULTS/gf df no delegate no tools/: 01 dietary_preference_report.md  03 shopping_list.md
RESULTS/gf df no delegate use tools/: 03 shopping_list.md
RESULTS/gf df use delegate no tools/: 01 dietary_preference_report.md  02 weekly_menu_plan.md  03 shopping_list.md
gf df no delegate no tools/: 02 weekly_menu_plan.md
gf df no delegate use tools/: 00 output terminal.md  01 dietary_preference_report.md  02 weekly_menu_plan.md
gf df use delegate no tools/: 00 terminal output.md
gf df use delegate use tools/: 00 terminal output.md  01 dietary_preference_report.md  02 weekly_menu_plan.md  03 shopping_list.md
src/my_planner/: crew.py  main.py
src/my_planner/config/: agents(ori).yaml  agents.yaml  tasks.yaml
